수할인 가격 적용

--- a/src/main/resources/templates/book/book_list.html
+++ b/src/main/resources/templates/book/book_list.html
@@ -116,6 +116,7 @@
         </ul>
     </div>
     <!-- 페이징처리 끝 -->
+    <!-- 장바구니,찜 기능 -->
     <script>
         $(document).ready(function () {
         $(".addWish").click(function () {
