--- a/src/main/resources/templates/book/book_detail.html
+++ b/src/main/resources/templates/book/book_detail.html
@@ -36,7 +36,7 @@
                         <br>
                         <h6>할인가</h6>
                         <div class="d-flex" style="color:red;">
-                            <div style="margin-right:10px;" th:text="${book.price}  + ' 원'"></div>
+                            <div style="margin-right:10px;" th:text="${book.discountPrice}  + ' 원'"></div>
                             <div th:text=" ' ( ' + ${book.discount} +'  % 할인' + ' ) ' "></div>
                         </div>
                     </div>
@@ -69,9 +69,9 @@
                            th:id="'addCartItem_' + ${book.id}" onclick="addCartItem(${book.id}); return false;">장바구니
                             담기</a>
                     </div>
-                    <div style="margin-bottom:5px">
-                        <a class="addCartItem btn btn-sm btn-primary" style="width: 150px"
-                           th:id="'addCartItem_' + ${book.id}" onclick="addCartItem(${book.id}); return false;">찜하기</a>
+                    <div>
+                        <a class="addWish btn btn-sm btn-primary" th:id="'addWish_' + ${book.id}"
+                           onclick="addWish(${book.id}); return false;" style="width:150px;">찜하기</a>
                     </div>
                 </div>
             </div>
@@ -86,7 +86,7 @@
                         리뷰
                     </a>
                     <div class="card-body" style="font-size:20px; color: red;">
-                        <div class="card-text" style="white-space: pre-line;" th:text="${book.price + ' 원'}"></div>
+                        <div class="card-text" style="white-space: pre-line;" th:text="${book.discountPrice + ' 원'}"></div>
                     </div>
                     <div style="margin-bottom:5px" class="justify-content-end">
                         <a class="btn btn-sm btn-primary" style="width: 100px; margin-right:10px;">바로구매</a>
@@ -170,6 +170,50 @@
                 </div>
             </div>
         </div>
+        <!-- 장바구니,찜 기능 -->
+        <script>
+            $(document).ready(function () {
+            $(".addWish").click(function () {
+                var bookId = this.id.split('_')[1];
+
+                Swal.fire({
+                    title: '찜 목록에',
+                    text: '해당 상품을 담으시겠습니까?',
+                    icon: 'warning',
+                    showCancelButton: true,
+                    confirmButtonColor: '#3085d6',
+                    cancelButtonColor: '#d33',
+                    confirmButtonText: '담기',
+                    cancelButtonText: '취소',
+                    preConfirm: () => {
+                        return new Promise((resolve) => {
+                            $.ajax({
+                                url: '/wish/add/' + bookId,
+                                type: 'GET',
+                                success: function (data) {
+                                      resolve(true);
+                                },
+                                error: function () {
+                                    resolve(false);
+                                }
+                            });
+                        });
+                    }
+                }).then((result) => {
+                    if (result.isConfirmed) {
+                        // SweetAlert2 확인 버튼을 누르면 실행되는 부분
+                        Swal.fire(
+                            '찜 목록에 상품을 담았습니다.',
+                            '',
+                            'success'
+                        ).then(() => {
+                            window.location.href = '/book/detail/' + bookId;
+                        });
+                    }
+                });
+            });
+        });
+        </script>
         <script>
             $(document).ready(function () {
              $(".addCartItem").click(function () {
