--- a/src/main/resources/templates/cartitem/cart_list.html
+++ b/src/main/resources/templates/cartitem/cart_list.html
@@ -62,11 +62,26 @@
                                         <img th:src="@{|/file/${book.thumbnailImg}|}" alt="사진" style="width: 120px; height: 120px;">
                                     </div>
                                     <div style="margin-left: 50px; justify-content:center;">
-                                        <a th:href="@{|/book/detail/${book.id}|}" th:text="${book.subject}"></a>
+                                        <div>
+                                            <div style="margin-bottom:10px;">
+                                                <a th:href="@{|/book/detail/${book.id}|}" th:text="${book.subject}"></a>
+                                            </div>
+                                            <div class="d-flex">
+                                                <p style="font-size: 1.0em;">정가 </p>
+                                                <del style="margin-left:10px; color:var(--gray-color-500);" th:text="${book.price  + ' 원'}"></del>
+                                            </div>
+                                            <div class="d-flex">
+                                                <p style="font-size: 1.0em; color:black;">할인가</p>
+                                                <div class="d-flex" style="color:red;">
+                                                    <div style="margin-left:10px; margin-right:10px;" th:text="${book.discountPrice}  + ' 원'"></div>
+                                                    <div th:text=" ' ( ' + ${book.discount} +'  % 할인' + ' ) ' "></div>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </td>
-                            <td th:text="${book.price}"></td>
+                            <td th:text="${book.discountPrice  + ' 원'}"></td>
                             <td style="align-items:center;">
                                 <div class="btn btn-sm btn-outline-secondary">
                                     <a th:href="@{/orders/order/list}">주문</a>
