찜 alet 및 할인 가격 적용 (#86)
* 수할인 가격 적용

--- a/src/main/resources/templates/book/book_detail.html
+++ b/src/main/resources/templates/book/book_detail.html
@@ -9,7 +9,8 @@
         <div class="title_book d-flex" style="padding-top:5px;">
             제목:
             <div th:text="${book.subject}"></div>
-            / 출판사:<div th:text="${book.publisher}"></div>
+            / 출판사:
+            <div th:text="${book.publisher}"></div>
         </div>
     </div>
     <div class="bt_section">
@@ -31,11 +32,13 @@
                     <div class="pb-3 mb-3 link-body-emphasis text-decoration-none border-bottom"
                          style="width: 100%; padding-left:10px;">
                         <h6>정가</h6>
-                        <div class="card-text" style="white-space: pre-line;" th:text="${book.price}"></div>
+                        <del th:text="${book.price  + ' 원'}"></del>
                         <br>
                         <h6>할인가</h6>
-                        <div class="card-text" style="white-space: pre-line; color:red;"
-                             th:text="${book.price}"></div>
+                        <div class="d-flex" style="color:red;">
+                            <div style="margin-right:10px;" th:text="${book.discountPrice}  + ' 원'"></div>
+                            <div th:text=" ' ( ' + ${book.discount} +'  % 할인' + ' ) ' "></div>
+                        </div>
                     </div>
                 </div>
                 <div>
@@ -54,12 +57,6 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card my-3">
-                        <div class="card-body">
-                            할인율
-                            <div class="card-text" style="white-space: pre-line;" th:text="${book.discount}"></div>
-                        </div>
-                    </div>
                 </div>
             </div>
             <div class="book_right-side bg-light">
@@ -73,8 +70,8 @@
                             담기</a>
                     </div>
                     <div>
-                        <a th:href="@{|/wish/add/${book.id}|}" onclick="return confirm('찜 목록에 추가 하시겠습니까?')"
-                           class="btn btn-sm btn-primary" style="width: 150px">찜 하기</a>
+                        <a class="addWish btn btn-sm btn-primary" th:id="'addWish_' + ${book.id}"
+                           onclick="addWish(${book.id}); return false;" style="width:150px;">찜하기</a>
                     </div>
                 </div>
             </div>
@@ -89,7 +86,7 @@
                         리뷰
                     </a>
                     <div class="card-body" style="font-size:20px; color: red;">
-                        <div class="card-text" style="white-space: pre-line;" th:text="${book.price + ' 원'}"></div>
+                        <div class="card-text" style="white-space: pre-line;" th:text="${book.discountPrice + ' 원'}"></div>
                     </div>
                     <div style="margin-bottom:5px" class="justify-content-end">
                         <a class="btn btn-sm btn-primary" style="width: 100px; margin-right:10px;">바로구매</a>
@@ -100,42 +97,43 @@
                 </div>
             </div>
             <div id="ebook_info" class="book_info">
-                <div class="formation-item d-flex" style="padding-top:5px; width:100%;">
-                    <article class="blog-post">
-                        <div class="card-text" style="white-space: pre-line;" th:text="${book.publisher}"></div>
-                        <div class="card-text" style="white-space: pre-line;" th:text="${book.bookIntroduce}"></div>
-                        <h2 class="display-5 link-body-emphasis mb-1">Sample blog post</h2>
-                        <p class="blog-post-meta">January 1, 2021 by <a href="#">Mark</a></p>
-
-                        <p>This blog post shows a few different types of content that’s supported and styled with
-                            Bootstrap. Basic typography, lists, tables, images, code, and more are all supported as
-                            expected.</p>
-                        <hr>
-                        <p>This is some additional paragraph placeholder content. It has been written to fill the
-                            available space and show how a longer snippet of text affects the surrounding content. We'll
-                            repeat it often to keep the demonstration flowing, so be on the lookout for this exact same
-                            string of text.</p>
-                        <h2>Blockquotes</h2>
-                        <p>This is an example blockquote in action:</p>
-                        <blockquote class="blockquote">
-                            <p>Quoted text goes here.</p>
-                        </blockquote>
-                        <p>This is some additional paragraph placeholder content. It has been written to fill the
-                            available space and show how a longer snippet of text affects the surrounding content. We'll
-                            repeat it often to keep the demonstration flowing, so be on the lookout for this exact same
-                            string of text.</p>
-                        <h3>Example lists</h3>
-                        <p>This is some additional paragraph placeholder content. It's a slightly shorter version of the
-                            other highly repetitive body text used throughout. This is an example unordered list:</p>
-                    </article>
+                <div class="title_book" style="padding-top:5px;">
+                    <h5>판매자</h5>
+                    <br>
+                    <div th:text="${book.publisher}"></div>
+                    <div class="pb-3 mb-3 link-body-emphasis text-decoration-none border-bottom"
+                         style="width: 100%;"></div>
+                    <h5>판매 소개</h5>
+                    <br>
+                    <div th:text="${book.content}">></div>
+                    <div class="pb-3 mb-3 link-body-emphasis text-decoration-none border-bottom"
+                         style="width: 100%;"></div>
+                </div>
+                <div class="title_book" style="padding-top:5px;">
+                    <h5>책 제목</h5>
+                    <br>
+                    <div th:text="${book.subject}"></div>
+                    <div class="pb-3 mb-3 link-body-emphasis text-decoration-none border-bottom"
+                         style="width: 100%;"></div>
+                    <h5>책소개</h5>
+                    <br>
+                    <div th:text="${book.bookIntroduce}"></div>
+                    <div class="pb-3 mb-3 link-body-emphasis text-decoration-none border-bottom"
+                         style="width: 100%;"></div>
+                </div>
+                <div class="title_book" style="padding-top:5px;">
+                    <h5>출판사</h5>
+                    <br>
+                    <div th:text="${book.publisher}"></div>
+                    <br>
                 </div>
             </div>
-            <div id="review_info" class="pb-3 mb-3 link-body-emphasis text-decoration-none border-bottom"
-                 style="width: 100%;"></div>
-            <h2>회원 리뷰</h2>
-            <div id="review_info" class="pb-3 mb-3 link-body-emphasis text-decoration-none border-bottom"
-                 style="width: 100%;"></div>
             <div class="book_bottom-section">
+                <div id="review_info" class="pb-3 mb-3 link-body-emphasis text-decoration-none border-bottom"
+                     style="width: 100%;"></div>
+                <h2>회원 리뷰</h2>
+                <div id="review_info" class="pb-3 mb-3 link-body-emphasis text-decoration-none border-bottom"
+                     style="width: 100%;"></div>
                 <div class="justify-content-end" style="margin-bottom:5px">
                     <!-- 리뷰 등록 폼 -->
                     <div class="review_form mb-3">
@@ -157,7 +155,8 @@
                                      style="width: 100%;">
                                     <div class="review-box mb-2">
                                         <div style="display:flex;" th:text="${review.author.username}"></div>
-                                        <div style="display:flex; justify-content:end; padding-right:10px;" th:text="${#temporals.format(review.createDate, 'yyyy-MM-dd')}"></div>
+                                        <div style="display:flex; justify-content:end; padding-right:10px;"
+                                             th:text="${#temporals.format(review.createDate, 'yyyy-MM-dd')}"></div>
                                         <div class="review-content">
                                             <span th:text="${review.content}"></span>
                                         </div>
@@ -170,13 +169,15 @@
                     </div>
                 </div>
             </div>
-            <script>
-                $(document).ready(function () {
-            $(".addCartItem").click(function () {
+        </div>
+        <!-- 장바구니,찜 기능 -->
+        <script>
+            $(document).ready(function () {
+            $(".addWish").click(function () {
                 var bookId = this.id.split('_')[1];
 
                 Swal.fire({
-                    title: '장바구니에',
+                    title: '찜 목록에',
                     text: '해당 상품을 담으시겠습니까?',
                     icon: 'warning',
                     showCancelButton: true,
@@ -186,9 +187,8 @@
                     cancelButtonText: '취소',
                     preConfirm: () => {
                         return new Promise((resolve) => {
-                            // Ajax 요청을 통한 서버에서의 삭제 작업
                             $.ajax({
-                                url: '/cartitem/add/' + bookId,
+                                url: '/wish/add/' + bookId,
                                 type: 'GET',
                                 success: function (data) {
                                       resolve(true);
@@ -203,7 +203,7 @@
                     if (result.isConfirmed) {
                         // SweetAlert2 확인 버튼을 누르면 실행되는 부분
                         Swal.fire(
-                            '장바구니에 상품을 담았습니다.',
+                            '찜 목록에 상품을 담았습니다.',
                             '',
                             'success'
                         ).then(() => {
@@ -213,6 +213,49 @@
                 });
             });
         });
-            </script>
-        </div>
+        </script>
+        <script>
+            $(document).ready(function () {
+             $(".addCartItem").click(function () {
+            var bookId = this.id.split('_')[1];
+
+            Swal.fire({
+                title: '장바구니에',
+                text: '해당 상품을 담으시겠습니까?',
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: '담기',
+                cancelButtonText: '취소',
+                preConfirm: () => {
+                    return new Promise((resolve) => {
+                        // Ajax 요청을 통한 서버에서의 삭제 작업
+                        $.ajax({
+                            url: '/cartitem/add/' + bookId,
+                            type: 'GET',
+                            success: function (data) {
+                                  resolve(true);
+                            },
+                            error: function () {
+                                resolve(false);
+                            }
+                        });
+                    });
+                }
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    // SweetAlert2 확인 버튼을 누르면 실행되는 부분
+                    Swal.fire(
+                        '장바구니에 상품을 담았습니다.',
+                        '',
+                        'success'
+                    ).then(() => {
+                        window.location.href = '/book/detail/' + bookId;
+                    });
+                }
+            });
+        });
+    });
+        </script>
 </html>
