--- a/src/main/resources/templates/book/book_list.html
+++ b/src/main/resources/templates/book/book_list.html
@@ -67,8 +67,7 @@
                                 담기</a>
                         </div>
                         <div>
-                            <a th:href="@{|/wish/add/${book.id}|}" onclick="return confirm('찜 목록에 추가 하시겠습니까?')"
-                               class="btn btn-sm btn-primary" style="width: 100%;">찜 하기</a>
+                            <a class="addWish btn btn-sm btn-primary" th:id="'addWish_' + ${book.id}" onclick="addWish(${book.id}); return false;" style="width:100%;">찜하기</a>
                         </div>
                         <li>
                             <!--수정중-->
@@ -117,6 +116,50 @@
         </ul>
     </div>
     <!-- 페이징처리 끝 -->
+    <!-- 장바구니,찜 기능 -->
+    <script>
+        $(document).ready(function () {
+        $(".addWish").click(function () {
+            var bookId = this.id.split('_')[1];
+
+            Swal.fire({
+                title: '찜 목록에',
+                text: '해당 상품을 담으시겠습니까?',
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: '담기',
+                cancelButtonText: '취소',
+                preConfirm: () => {
+                    return new Promise((resolve) => {
+                        $.ajax({
+                            url: '/wish/add/' + bookId,
+                            type: 'GET',
+                            success: function (data) {
+                                  resolve(true);
+                            },
+                            error: function () {
+                                resolve(false);
+                            }
+                        });
+                    });
+                }
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    // SweetAlert2 확인 버튼을 누르면 실행되는 부분
+                    Swal.fire(
+                        '찜 목록에 상품을 담았습니다.',
+                        '',
+                        'success'
+                    ).then(() => {
+                        window.location.href = '/book/list'
+                    });
+                }
+            });
+        });
+    });
+    </script>
     <script>
         $(document).ready(function () {
     $(".addCartItem").click(function () {
@@ -133,7 +176,6 @@
             cancelButtonText: '취소',
             preConfirm: () => {
                 return new Promise((resolve) => {
-                    // Ajax 요청을 통한 서버에서의 삭제 작업
                     $.ajax({
                         url: '/cartitem/add/' + bookId,
                         type: 'GET',
@@ -161,48 +203,6 @@
     });
 });
     </script>
-    <script>
-        $(document).ready(function () {
-        $(".addWish").click(function () {
-        var bookId = this.id.split('_')[1];
 
-        Swal.fire({
-            title: '찜 목록에',
-            text: '해당 상품을 담으시겠습니까?',
-            icon: 'warning',
-            showCancelButton: true,
-            confirmButtonColor: '#3085d6',
-            cancelButtonColor: '#d33',
-            confirmButtonText: '담기',
-            cancelButtonText: '취소',
-            preConfirm: () => {
-                return new Promise((resolve) => {
-                    $.ajax({
-                        url: '/wish/add/' + bookId,
-                        type: 'GET',
-                        success: function (data) {
-                              resolve(true);
-                        },
-                        error: function () {
-                            resolve(false);
-                        }
-                    });
-                });
-            }
-        }).then((result) => {
-            if (result.isConfirmed) {
-                // SweetAlert2 확인 버튼을 누르면 실행되는 부분
-                Swal.fire(
-                    '찜 목록에 상품을 담았습니다.',
-                    '',
-                    'success'
-                ).then(() => {
-                    window.location.href = '/book/list'
-                });
-            }
-        });
-    });
-});
-    </script>
 </div>
 </html>
