--- a/src/main/resources/templates/book/sellerBookList.html
+++ b/src/main/resources/templates/book/sellerBookList.html
@@ -17,7 +17,7 @@
                 <tr>
                     <th scope="col">책</th>
                     <th>판매가</th>
-                    <th>할인</th>
+                    <th>할인율</th>
                     <th>등록일</th>
                 </tr>
                 </thead>
@@ -25,7 +25,7 @@
                 <tr th:each="book : ${bookList}">
                     <th scope="row">[[${book.subject}]]</th>
                     <td th:text="${book.price}"> 원</td>
-                    <td th:text="${book.discount * 100}">%</td>
+                    <td >[[${book.discount}]]<span>%</span></td>
                     <td th:text="${#temporals.format(book.createDate, 'yyyy-MM-dd HH:mm')}"></td>
                     <td>
                         <a th:href="@{|/book/modify/${book.Id}|}" class="btn btn-sm btn-success">수정</a>
