결제 팝업 구현 fix/83

--- a/src/main/resources/templates/orders/ordersProgress.html
+++ b/src/main/resources/templates/orders/ordersProgress.html
@@ -68,7 +68,7 @@
                             </td>
                             <td>[[${orders.book.price}]] <span>원</span></td>
                             <td>
-                                <button onclick="window.open('http://localhost:8010/orders/confirm', '결제완료', 'width=500, height=500, location=no, status=no, scrollbars=yes, top=150,left=600');"
+                                <button onclick="window.open('http://localhost:8010/checkout', '결제', 'width=550, height=700, location=no, status=no, scrollbars=yes, top=150,left=600');"
                                 class="btn btn-primary">
                                     결제
                                 </button>
