--- a/src/main/resources/templates/orders/orders_checkout.html
+++ b/src/main/resources/templates/orders/orders_checkout.html
@@ -29,6 +29,9 @@
         <div id="payment-method"></div>
         <!-- 이용약관 UI -->
         <div id="agreement"></div>
+        <div>
+            <span>[[${orders.totalPrice}]]</span><span>원</span>
+        </div>
         <!-- 쿠폰 체크박스 -->
         <div style="padding-left: 25px">
             <div class="checkable typography--p">
@@ -53,11 +56,12 @@
     </div>
 </div>
 <script>
+/*<![CDATA[*/
     const button = document.getElementById("payment-button");
     const coupon = document.getElementById("coupon-box");
     const generateRandomString = () =>
       window.btoa(Math.random()).slice(0, 20);
-    const amount = 50000;
+    const amount = [[${orders.totalPrice}]];
     // ------  결제위젯 초기화 ------
     // TODO: clientKey는 개발자센터의 결제위젯 연동 키 > 클라이언트 키로 바꾸세요.
     // TODO: 구매자의 고유 아이디를 불러와서 customerKey로 설정하세요. 이메일・전화번호와 같이 유추가 가능한 값은 안전하지 않습니다.
@@ -97,8 +101,8 @@
       // 결제를 요청하기 전에 orderId, amount를 서버에 저장하세요.
       // 결제 과정에서 악의적으로 결제 금액이 바뀌는 것을 확인하는 용도입니다.
       paymentWidget.requestPayment({
-        orderId: generateRandomString(),
-        orderName: "토스 티셔츠 외 2건",
+        orderId: [[${orders.id}]],
+        orderName: [[${orders.subject}]],
         successUrl: window.location.origin + "/success",
         failUrl: window.location.origin + "/fail",
         customerEmail: "customer123@gmail.com",
@@ -106,6 +110,7 @@
         customerMobilePhone: "01012341234",
       });
     });
+/*]]>*/
 </script>
 </body>
 </html>
