--- a/src/main/resources/templates/book/book_detail.html
+++ b/src/main/resources/templates/book/book_detail.html
@@ -165,16 +165,16 @@
                                         <span>평점: <span th:utext="|&#9733;| + ${review.rating}" class="star"></span></span>
                                         <div style="display:flex;" th:text="${review.author.username}"></div>
                                         <div style="display:flex; justify-content:end; padding-right:10px;"
-                                             th:text="${#temporals.format(review.createDate, 'yyyy-MM-dd HH:mm')}"></div>
+                                             th:text="${#temporals.format(review.createDate, 'yyyy-MM-dd ')}"></div>
                                         <div style="display:flex; justify-content:end; padding-right:10px;"
-                                             th:text="${#temporals.format(review.modifiedDate, 'yyyy-MM-dd HH:mm')}"></div>
+                                             th:text="${#temporals.format(review.modifiedDate, 'yyyy-MM-dd ')}"></div>
                                         <div class="review-content">
                                             <span th:text="${review.content}"></span>
                                         </div>
                                         <!-- 수정 버튼 -->
-                                        <button class="btn btn-sm btn-primary btn-edit" style="width: 100px; margin-right:10px;">수정</button>
+                                        <button sec:authorize="isAuthenticated()" class="btn btn-sm btn-primary btn-edit" style="width: 100px; margin-right:10px;">수정</button>
                                         <!-- 삭제 버튼 -->
-                                        <a th:href="@{|/review/delete/${review.id}|}" class="btn btn-sm btn-primary"
+                                        <a th:href="@{|/review/delete/${review.id}|}" sec:authorize="isAuthenticated()" class="btn btn-sm btn-primary"
                                            style="width: 100px; margin-right:10px; margin-top:20px;">삭제</a>
                                         <!-- 리뷰 수정 폼 -->
                                         <div class="review-edit-form">
